infogade en Button samt EditText för att infoga ett namn samnt spara detta

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Shared Preferences</string>
+    <string name="intro_text">Fyll i användarenamn</string>
 </resources>
